# Uni

./: README.md  Smart4Aviation.sh
Projekt_JPO_KrzysztofSzczepanski/: CMakeLists.txt  ReadMe.md  ReadMe.txt
Projekt_JPO_KrzysztofSzczepanski/build_mac/: ReadMe.txt
Projekt_JPO_KrzysztofSzczepanski/include/: Calculator.h  Interface.h  Systems.h
Projekt_JPO_KrzysztofSzczepanski/src/: Calculator.cpp  Interface.cpp  Systems.cpp  main.cpp
Projekt_JPO_KrzysztofSzczepanski/tests/: Testy.cpp
cpp_practise/: MAP.cpp  bazadanych.cpp  cwel.cpp  fibonaci.cpp  gierka.cpp  gierka2.cpp  kopiagierka2.cpp  macierz symetri.cpp
cpp_practise/programy_vectory/: funkcja_vector.cpp  funkcja_vector2.cpp  funkcja_vector3.cpp  mnozenie_macierzy.cpp  mnozenie_macierzy_chat.cpp  program1.cpp
python_practise/: bulk_file_renamer.py  check_apka.py  check_apka_gui.py  number_guessing_game.py  selenium_crypto_check.py  simple_ftp.py  sorting_files.py  test_selenium.py
python_studies/: check_apka_gui.py  rock_paper_scissors.py  roll_the_dice.py
text_communicator_tcp/: CMakeLists.txt  README.md  client.c  common.h  server.c  users.txt
ultrasonic_distance_meter/: DAC.c  DAC.h  JLinkLog.txt  README.md  TPM.c  TPM.h  klaw.c  klaw.h  main.c  projekt.uvguix.chris  projekt.uvoptx  projekt.uvprojx  tsi.h
ultrasonic_distance_meter/Listings/: DAC_DDS.map
ultrasonic_distance_meter/Objects/: DAC_DDS.axf  DAC_DDS.build_log.htm  DAC_DDS.htm  DAC_DDS.lnp  DAC_DDS_KL05Z.dep  dac.d  i2c.d  klaw.d  lcd1602.d  main.d  projekt_KL05Z.dep  system_mkl05z4.d  tpm.d  tsi.d
ultrasonic_distance_meter/RTE/_KL05Z/: RTE_Components.h
